--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,12 +31,16 @@
         </activity>
         <activity
             android:name=".RegisterActivity"
-            android:label="@string/app_name"
+            android:label="@string/register"
             android:launchMode="singleTop"
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
+            android:label="@string/mainmenu"
+            android:launchMode="singleTop" />
+        <activity
+            android:name=".Contacts"
+            android:label="@string/essential_contacts"
             android:launchMode="singleTop" />
     </application>
 
