--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name"
@@ -47,7 +49,7 @@
             android:label="@string/mainmenu"
             android:launchMode="singleTop" />
         <activity
-            android:name=".Calendar"
+            android:name=".CalendarEvents"
             android:label="@string/calendar"
             android:launchMode="singleTop" />
         <activity
