--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="vladislavsignatjevs.renaldyalisys">
+
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="21" />
@@ -13,20 +14,22 @@
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
 
+    <android:uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <android:uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
-        android:name="vladislavsignatjevs.renaldyalisys.app.AppController"
+        android:name=".app.AppController"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
-            android:windowSoftInputMode="adjustPan" >
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -55,6 +58,10 @@
             android:label="@string/calendar"
             android:launchMode="singleTop" />
         <activity
+            android:name=".calendar_events_view"
+            android:label="Events"
+            android:launchMode="singleTop" />
+        <activity
             android:name=".DialysisCalendar"
             android:label="@string/calendar"
             android:launchMode="singleTop" />
@@ -66,6 +73,7 @@
             android:name=".Healthcheck"
             android:label="@string/healthcheck"
             android:launchMode="singleTop" />
+
         <activity
             android:name=".Treatment"
             android:label="@string/treatment"
@@ -73,6 +81,14 @@
         <activity
             android:name=".FAQ"
             android:label="@string/faq"
+            android:launchMode="singleTop" />
+
+        <activity android:name=".EventPage"
+            android:label="@string/eventDetails"
+            android:launchMode="singleTop" />
+
+        <activity android:name=".CreateEvent"
+            android:label="@string/createEvent"
             android:launchMode="singleTop" />
 
     </application>
