-All events now showing in bold(changed final String[] months according to date format used in when finding gridcells matching the date -some minor refactoring to CalendarEvents -CreateEvent activity added(working) -ChangeEvent activity added(change event functionality working, need to sort out putExtra -calendar_events_view changed to allow editing events( extra row at event containing button "change event")

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,8 +83,8 @@
             android:label="@string/faq"
             android:launchMode="singleTop" />
 
-        <activity android:name=".EventPage"
-            android:label="@string/eventDetails"
+        <activity android:name=".ChangeEvent"
+            android:label="@string/changeEvent"
             android:launchMode="singleTop" />
 
         <activity android:name=".CreateEvent"
