--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,11 +40,8 @@
             android:name=".RegisterActivity"
             android:label="@string/register"
             android:launchMode="singleTop"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/mainmenu"
-            android:launchMode="singleTop" />
         <activity
             android:name=".Contacts"
             android:label="@string/essential_contacts"
@@ -52,43 +49,48 @@
         <activity
             android:name=".MainMenu"
             android:label="@string/mainmenu"
+            android:screenOrientation="portrait"
             android:launchMode="singleTop" />
         <activity
             android:name=".CalendarEvents"
             android:label="@string/calendar"
+            android:screenOrientation="portrait"
             android:launchMode="singleTop" />
         <activity
             android:name=".calendar_events_view"
             android:label="Events"
-            android:launchMode="singleTop" />
-        <activity
-            android:name=".DialysisCalendar"
-            android:label="@string/calendar"
+            android:screenOrientation="portrait"
             android:launchMode="singleTop" />
         <activity
             android:name=".Profile"
             android:label="@string/profile"
+            android:screenOrientation="portrait"
             android:launchMode="singleTop" />
         <activity
             android:name=".Healthcheck"
             android:label="@string/healthcheck"
+            android:screenOrientation="portrait"
             android:launchMode="singleTop" />
 
         <activity
             android:name=".Treatment"
             android:label="@string/treatment"
+            android:screenOrientation="portrait"
             android:launchMode="singleTop" />
         <activity
             android:name=".FAQ"
             android:label="@string/faq"
+            android:screenOrientation="portrait"
             android:launchMode="singleTop" />
 
         <activity android:name=".ChangeEvent"
             android:label="@string/changeEvent"
+            android:screenOrientation="portrait"
             android:launchMode="singleTop" />
 
         <activity android:name=".CreateEvent"
             android:label="@string/createEvent"
+            android:screenOrientation="portrait"
             android:launchMode="singleTop" />
 
     </application>
