--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,9 @@ android {
         }
     }
 }
+    repositories {
+        maven { url "https://jitpack.io" }
+    }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -29,4 +32,5 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.mcxiaoke.volley:library-aar:1.0.0'
     compile 'com.squareup:android-times-square:1.6.5@aar'
+    compile 'com.github.PhilJay:MPAndroidChart:v2.2.4'
 }
